--- a/webapp/src/assets/CSS/style.css
+++ b/webapp/src/assets/CSS/style.css
@@ -3,43 +3,85 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-body {
-  background-color: #4901ff;
-}
-
 ul {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 15px 15px 10px 10px;
+  background-color: #4901ff;
+  border-radius: 5px;
 }
 
 li a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 li a:hover {
-    color: #250081;
+  color: #250081;
 }
 
 .container {
-    margin: 45px 25px;
+  margin: 45px 25px;
 }
 
 .nav-items {
-    text-align: end;
+  text-align: end;
 }
 
 .nav-item {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .name-container {
-    margin-top: 100px;
+  margin-top: 100px;
 }
 
 .name {
+  color: white;
+  font-size: 5rem;
+  margin: 0px;
+}
+
+.title {
+  font-size: 5rem;
+}
+
+.project-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card {
+    display: flex;
+    margin-bottom: 100px;
+    width: 800px;
+    gap: 40px;
+}
+
+.proj-img {
+    width: 400px;
+    height: 200px;
+    object-fit: cover;
+    border: black 1px solid;
+}
+
+.project-links {
+    margin-top: 40px;
+}
+
+.github-btn {
+    text-decoration: none;
+    color: black;
+    padding: 5px;
+    border-bottom: black 2px solid;
+    margin-right: 30px;
+}
+
+.view-btn {
+    text-decoration: none;
+    background-color: #4901ff;
+    border-radius: 5px;
+    padding: 10px 30px;
     color: white;
-    font-size: 5rem;
-    margin: 0px;
 }
