--- a/webapp/src/assets/CSS/style.css
+++ b/webapp/src/assets/CSS/style.css
@@ -36,10 +36,14 @@ li a:hover {
   margin-top: 100px;
 }
 
+.first-name {
+  display: flex;
+}
+
 .name {
   color: white;
   font-size: 5rem;
-  margin: 0px;
+  margin: 0px 30px 0 0;
 }
 
 .title {
@@ -47,100 +51,124 @@ li a:hover {
 }
 
 .project-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .card {
-    display: flex;
-    margin-bottom: 100px;
-    width: 800px;
-    gap: 40px;
+  display: flex;
+  margin-bottom: 100px;
+  width: 800px;
+  gap: 20px;
 }
 
 .proj-img {
-    width: 400px;
-    height: 200px;
-    object-fit: cover;
-    border: black 1px solid;
+  width: 400px;
+  height: 200px;
+  object-fit: cover;
+  border: black 1px solid;
 }
 
 .project-links {
-    margin-top: 40px;
+  margin-top: 40px;
 }
 
 .github-btn {
-    text-decoration: none;
-    color: black;
-    padding: 5px;
-    border-bottom: black 2px solid;
-    margin-right: 30px;
+  text-decoration: none;
+  color: black;
+  padding: 5px;
+  border-bottom: black 2px solid;
+  margin-right: 30px;
 }
 
 .github-btn:hover {
-    color: #4901ff;
-    border-bottom: #4901ff 2px solid;
+  color: #4901ff;
+  border-bottom: #4901ff 2px solid;
 }
 
 .view-btn {
-    text-decoration: none;
-    background-color: #4901ff;
-    border-radius: 5px;
-    padding: 10px 30px;
-    color: white;
+  text-decoration: none;
+  background-color: #4901ff;
+  border-radius: 5px;
+  padding: 10px 30px;
+  color: white;
 }
 
 .view-btn:hover {
-    background-color: black;
+  background-color: black;
 }
 
 .contact-items {
-    padding: 0;
-    margin: 0 30%;
-    display: flex;
-    justify-content: space-between;
+  padding: 0;
+  margin: 0 30%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .contact-item {
-    color: black;
-    padding: 5px;
-    border-bottom: black 2px solid;
+  color: black;
+  padding: 5px;
+  border-bottom: black 2px solid;
 }
 
 .contact-item:hover {
-    color: #4901ff;
-    border-bottom: #4901ff 2px solid;
+  color: #4901ff;
+  border-bottom: #4901ff 2px solid;
 }
 
 form {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
-input, textarea {
-    background-color: rgb(237, 237, 237);
-    border: none;
-    padding: 10px;
-    margin: 5px 0;
+input,
+textarea {
+  background-color: rgb(237, 237, 237);
+  border: none;
+  padding: 10px;
+  margin: 5px 0;
 }
 
 .contact-form {
-    margin: 100px 30%;
+  margin: 100px 30%;
 }
 
 .submit-btn {
-    background-color: #4901ff;
-    color: white;
-    cursor: pointer;
+  background-color: #4901ff;
+  color: white;
+  cursor: pointer;
 }
 
 .submit-btn:hover {
-    background-color: black;
+  background-color: black;
 }
 
 #question {
-    height: 250px;
-    vertical-align: top;
+  height: 250px;
+  vertical-align: top;
 }
 
+/* Media query to change elements on screens below 1000px */
+@media only screen and (max-width: 1000px) {
+  .name,
+  .title {
+    font-size: 3rem;
+  }
+
+  .card {
+    flex-direction: column;
+    width: 250px;
+  }
+
+  .proj-img {
+    width: 250px;
+    height: 125px;
+  }
+
+  .contact-items {
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+
+}
